--- a/public/about/index.html
+++ b/public/about/index.html
@@ -64,6 +64,9 @@
 
     <div class="article-content">
       <h2 id="2020">2020</h2>
+<ol>
+<li><a href="/rmarkdown_rladies/rmarkdownRladies_tst.html">R Ladies Colombo - RMarkdown</a></li>
+</ol>
 
     </div>
   </article>
