--- a/static/rmarkdown_rladies/rmarkdownRladies_tst.html
+++ b/static/rmarkdown_rladies/rmarkdownRladies_tst.html
@@ -21,12 +21,7 @@ class: center, middle, inverse, title-slide
 
 ---
 
-class: split-two white
-
-
----
 class: middle center bg-main1
-
 ---
 background-image:url("screenshots/1img.png")
 background-size: contain
@@ -42,23 +37,18 @@ background-size: contain
 ---
 background-image:url("screenshots/4img.png")
 background-size: contain
-
 ---
 background-image:url("screenshots/5img.png")
 background-size: contain
-
 ---
 background-image:url("screenshots/6img.png")
 background-size: contain
-
 ---
 background-image:url("screenshots/7img.png")
 background-size: contain
-
 ---
 background-image:url("screenshots/8img.png")
 background-size: contain
-
 ---
 background-image:url("screenshots/9img.png")
 background-size: contain
@@ -84,7 +74,6 @@ background-image:url("screenshots/14img.png")
 background-size: contain
 
 ---
-
 background-image:url("screenshots/15img.png")
 background-size: contain
 
@@ -97,27 +86,94 @@ background-image:url("screenshots/17img.png")
 background-size: contain
 
 ---
-
 class: middle center bg-main1
 
 <span>&lt;i class="fas  fa-wrench fa-5x faa-flash animated "&gt;&lt;/i&gt;</span>
 
 # Creating an R Markdown document
+
 ---
+
+background-image: url(rmarkdown_step1.png)
+background-position: center
+background-size: contain
+
+
+---
+background-image: url(rmarkdown_step2.png)
+background-position: center
+background-size: contain
+
+---
+
+background-image: url(rmarkdown_step2_1.png)
+background-position: center
+background-size: contain
+---
+
+background-image: url(rmarkdown_step3.png)
+background-position: center
+background-size: contain
+
+class: center, middle
+
+
+---
+
+background-image: url(rmarkdown_step4.png)
+background-position: center
+background-size: contain
+
+class: center, middle
+
+---
+
+# Select a folder to save the document 
+
+![](rmarkdown_save1.png)
+---
+
+# Give a name to the document
+
+![](rmarkdown_save2.png)
+
+---
+
+background-image: url(rmarkdown_step5.png)
+background-position: center
+background-size: contain
+
+class: center, middle
+
+---
+
+background-image: url(rmarkdown_step6.png)
+background-position: center
+background-size: contain
+
+class: center, middle
+
+---
+
+background-image: url(rmarkdown_step7.png)
+background-position: center
+background-size: contain
+
+class: center, middle
+
+---
+
+
+&lt;video width="100%" height="100%" controls id="sc1"&gt;
+&lt;source src="media/sc1.mp4" type="video/mp4"&gt;
+&lt;/video&gt;
+  
+---
+
 background-image:url("anatomy.jpeg")
 background-size:contain
 
 # R Markdown Anatomy
-
----
-
-class: center, middle
-
-# Thanks!
-
-Slides created via the R package [**xaringan**](https://github.com/yihui/xaringan).
-
-The chakra comes from [remark.js](https://remarkjs.com), [**knitr**](https://yihui.org/knitr), and [R Markdown](https://rmarkdown.rstudio.com).
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
