--- a/public/rmarkdown_rladies/rmarkdownRladies_tst.html
+++ b/public/rmarkdown_rladies/rmarkdownRladies_tst.html
@@ -183,10 +183,15 @@ class: center, middle
 
 ---
 
+# Demo
 
 &lt;video width="100%" height="100%" controls id="sc1"&gt;
-&lt;source src="media/sc1.mp4" type="video/mp4"&gt;
+&lt;source src="media/1_media.mp4" type="video/mp4"&gt;
 &lt;/video&gt;
+
+---
+
+&lt;iframe width="860" height="315" src="media/1_media.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen&gt;&lt;/iframe&gt;
   
 ---
 
