update blog and slides

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -64,17 +64,25 @@
 
     <div class="article-content">
       <h2 id="2021">2021</h2>
-<ol>
-<li><a href="/2_ggplot2_intro/2_ggplot2_intro.html">Intro slides - Plot a lot with ggplot2</a></li>
-</ol>
+<ul>
+<li>
+<p>Invited talk - Getting the most out of your research!, Reflections and lessons learned from my research journey</p>
+<p>Date: 14 February 2021</p>
+<p>Venue: Online</p>
+<p>To-whom: MSc Students, Department of Mathematics, University of Moratuwa</p>
+</li>
+<li>
+<p><a href="/2_ggplot2_intro/2_ggplot2_intro.html">Intro slides - Plot a lot with ggplot2</a></p>
+</li>
+</ul>
 <h2 id="2020">2020</h2>
-<ol>
+<ul>
 <li>
 <p><a href="/rmarkdown_rladies/rmarkdownRladies_tst.html">R Ladies Colombo - RMarkdown</a></p>
 <p>Workshop description: <a href="https://rladiescolombo.netlify.app/talk/1_rmarkdown/">here&hellip;</a></p>
 <p><a href="https://www.meetup.com/rladies-colombo/events/275260700/">R-Ladies Colombo Meetup</a></p>
 </li>
-</ol>
+</ul>
 
     </div>
   </article>
