--- a/static/3_moratuwa_msc_2_2021/research_journey.html
+++ b/static/3_moratuwa_msc_2_2021/research_journey.html
@@ -132,10 +132,7 @@ background-image: url(1.png)
 background-position: center
 background-size: contain
 
----
-background-image: url(2.png)
-background-position: center
-background-size: contain
+
 
 ---
 background-image: url(3.png)
@@ -148,11 +145,7 @@ background-image: url(4.png)
 background-position: center
 background-size: contain
 
----
 
-background-image: url(5.png)
-background-position: center
-background-size: contain
 ---
 
 background-image: url(6.png)
@@ -351,8 +344,6 @@ Weekly notified dengue cases in 25 districts
 
 - To identify seasonal oscillations with time-varying intensity and frequency.
 
-
----
 
 ## Wavelet Transform
 
@@ -701,7 +692,7 @@ background-size: contain
 
 - Read good journal articles
 
-- Framing a Research Question
+- Framing a research question
 
     - Motivation, Research gap, Objectives
     
@@ -721,6 +712,8 @@ background-size: contain
 
 
 ## Contact: ttalagala@sjp.ac.lk
+
+## web: https://thiyanga.netlify.app/
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
