--- a/static/4_machinelearning/4_machine_learning.html
+++ b/static/4_machinelearning/4_machine_learning.html
@@ -46,6 +46,12 @@ class: middle center bg-main1
 # Thank you
 
 &lt;img src="CLBhexSticker.png" width="30%" /&gt;
+
+
+
+<span>&lt;i class="fab  fa-twitter fa-5x faa-float animated " style=" color:lightblue;"&gt;&lt;/i&gt;</span>
+
+# @RLadiesColombo
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
