--- a/static/6_thesiswriting/main.html
+++ b/static/6_thesiswriting/main.html
@@ -32,6 +32,25 @@ class: center, middle, inverse, title-slide
 &lt;/style&gt;
 
 
+&lt;style type="text/css"&gt;
+.remark-slide-content {
+  font-size: 28px;
+  padding: 20px 80px 20px 80px;
+}
+.remark-code, .remark-inline-code {
+  background: #f0f0f0;
+}
+.remark-code {
+  font-size: 24px;
+}
+.huge .remark-code { /*Change made here*/
+  font-size: 200% !important;
+}
+.tiny .remark-code { /*Change made here*/
+  font-size: 50% !important;
+}
+&lt;/style&gt;
+
 # Thesis Writing
 
 .pull-left[
@@ -90,12 +109,33 @@ class: center, middle, inverse, title-slide
 
 
 ---
+# Focus
+
+- Application
+
+&gt; Talagala, T. (2015). **Distributed lag nonlinear modelling approach to identify relationship between climatic factors and dengue incidence in Colombo District, Sri Lanka.** Epidemiology, Biostatistics and Public Health, 12(4).
+
+- Methodological framework
+
+&gt; Montero-Manso, P., Athanasopoulos, G., Hyndman, R. J., &amp; Talagala, T. S. (2020). **FFORMA: Feature-based forecast model averaging.** International Journal of Forecasting, 36(1), 86-92
+
+
+---
+# Focus (cont.)
+
+- Development and application of a methodological framework 
+
+&gt; Talagala, Thiyanga S., Feng Li, and Yanfei Kang. **"FFORMPP: Feature-based forecast model performance prediction."** International Journal of Forecasting (2021).
+
+---
 
 # Types of Theses
 
 1. Traditional thesis
 
 2. Thesis by publication
+
+
 
 ---
 
@@ -240,10 +280,6 @@ class: center, middle, inverse, title-slide
 
 --
 
-- State the research problem
-
---
-
 - State research aims/ objectives
 
 --
@@ -251,24 +287,433 @@ class: center, middle, inverse, title-slide
 - Outline the order of the information in the chapter
 
 
+---
+class: inverse, middle, center
+
+
+# Exercise 1
+
+**Ballestra, L. V., Guizzardi, A., &amp; Palladini, F. (2019). Forecasting and trading on the VIX futures market: A neural network approach based on open to close returns and coincident indicators. International Journal of Forecasting, 35(4), 1250-1262.**
+
+
+---
+
+#Ballestra, L. V., Guizzardi, A., &amp; Palladini, F. (2019), IJF
+
+"The VIX index represents the market’s estimate of the future volatility of the S&amp;P 500 over the next thirty
+days. It provide a benchmark of the short-term expected volatility, as futures and options contracts can be
+inscribed on (see Whaley, 2008). In fact, implied volatility reflects the market makers’ point of view about the
+expected volatility of the futures’ underlying assets. Therefore, since market makers are often among the most
+informed agents, implied volatility should outperform the historical one in forecasting the realized volatility
+of the futures’ underlying asset (Shu and Zhang, 2012)."
+
+---
+
+#Ballestra, L. V., Guizzardi, A., &amp; Palladini, F. (2019), IJF
+
+"**The VIX index represents the market’s estimate of the future volatility of the S&amp;P 500 over the next thirty
+days.** It provide a benchmark of the short-term expected volatility, as futures and options contracts can be
+inscribed on (see Whaley, 2008). In fact, implied volatility reflects the market makers’ point of view about the
+expected volatility of the futures’ underlying assets. Therefore, since market makers are often among the most
+informed agents, implied volatility should outperform the historical one in forecasting the realized volatility
+of the futures’ underlying asset (Shu and Zhang, 2012)."
+
+&gt; Give an overview of your research topic: **state the general topic - define terms**
+
+---
+
+
+#Ballestra, L. V., Guizzardi, A., &amp; Palladini, F. (2019), IJF
+
+"The VIX index represents the market’s estimate of the future volatility of the S&amp;P 500 over the next thirty
+days. **It provide a benchmark of the short-term expected volatility, as futures and options contracts can be
+inscribed on (see Whaley, 2008).** In fact, implied volatility reflects the market makers’ point of view about the
+expected volatility of the futures’ underlying assets. Therefore, since market makers are often among the most
+informed agents, implied volatility should outperform the historical one in forecasting the realized volatility
+of the futures’ underlying asset (Shu and Zhang, 2012).**"
+
+&gt; Give an overview of your research topic: **Narrow down your topic**
+
+---
+
+#Ballestra, L. V., Guizzardi, A., &amp; Palladini, F. (2019), IJF
+
+"The VIX index represents the market’s estimate of the future volatility of the S&amp;P 500 over the next thirty
+days. It provide a benchmark of the short-term expected volatility, as futures and options contracts can be
+inscribed on (see Whaley, 2008). **In fact,** implied volatility reflects the market makers’ point of view about the
+expected volatility of the futures’ underlying assets. **Therefore,** since market makers are often among the most
+informed agents, implied volatility should outperform the historical one in forecasting the realized volatility
+of the futures’ underlying asset (Shu and Zhang, 2012).**"
+
+&gt; Give an overview of your research topic: **Ideas/ arguments are linked together.**
+
+---
+class: inverse, middle, center
+
+# Exercise 1 (cont.): Paragraph 2
+
+---
+
+# Ballestra, L. V., Guizzardi, A., &amp; Palladini, F. (2019), IJF
+
+.tiny["Despite the importance and the common use of VIX as a volatility measure, only little attention has been paid
+to the problem of forecasting it. In particular, the few works on the subject show that the VIX is to some extent
+predictable. This finding, albeit theoretically interesting, is not necessarily helpful for traders, because VIX is
+tradable only as derivative contracts, whose dynamics does not always follow that of the VIX index. For
+example, Asensio (2013), Degiannakis (2008), Kostantinidi et al. (2008), Konstantinidi and Skiadopoulos
+(2011), who are among the few authors focusing on VIX futures (henceforth referred to as VXFs), highlight
+only a weak evidence of statistical predictability and experience a low level of profitability when implementing
+trading strategies based on VIX forecasts. The overall picture is not encouraging for investors: on the one hand,
+there is evidence that VIX is predictable; on the other, it seems very hard to trade VXFs by learning from the
+(predicted) VIX dynamics. "]
+
+---
+
+# Ballestra, L. V., Guizzardi, A., &amp; Palladini, F. (2019), IJF
+
+.tiny["**Despite the importance and the common use of VIX as a volatility measure, only little attention has been paid
+to the problem of forecasting it.** In particular, the few works on the subject show that the VIX is to some extent
+predictable. This finding, albeit theoretically interesting, is not necessarily helpful for traders, because VIX is
+tradable only as derivative contracts, whose dynamics does not always follow that of the VIX index. For
+example, Asensio (2013), Degiannakis (2008), Kostantinidi et al. (2008), Konstantinidi and Skiadopoulos
+(2011), who are among the few authors focusing on VIX futures (henceforth referred to as VXFs), highlight
+only a weak evidence of statistical predictability and experience a low level of profitability when implementing
+trading strategies based on VIX forecasts. The overall picture is not encouraging for investors: on the one hand,
+there is evidence that VIX is predictable; on the other, it seems very hard to trade VXFs by learning from the
+(predicted) VIX dynamics. "]
+
+---
+
+# Ballestra, L. V., Guizzardi, A., &amp; Palladini, F. (2019), IJF
+
+.tiny["Despite the importance and the common use of VIX as a volatility measure, only little attention has been paid
+to the problem of forecasting it.** In particular, the few works on the subject show that the VIX is to some extent
+predictable.** This finding, albeit theoretically interesting, is not necessarily helpful for traders, because VIX is
+tradable only as derivative contracts, whose dynamics does not always follow that of the VIX index. For
+example, Asensio (2013), Degiannakis (2008), Kostantinidi et al. (2008), Konstantinidi and Skiadopoulos
+(2011), who are among the few authors focusing on VIX futures (henceforth referred to as VXFs), highlight
+only a weak evidence of statistical predictability and experience a low level of profitability when implementing
+trading strategies based on VIX forecasts. The overall picture is not encouraging for investors: on the one hand,
+there is evidence that VIX is predictable; on the other, it seems very hard to trade VXFs by learning from the
+(predicted) VIX dynamics. "]
+
+---
+
+
+# Ballestra, L. V., Guizzardi, A., &amp; Palladini, F. (2019), IJF
+
+.tiny["Despite the importance and the common use of VIX as a volatility measure, only little attention has been paid
+to the problem of forecasting it. In particular, the few works on the subject show that the VIX is to some extent
+predictable.** This finding, albeit theoretically interesting, is not necessarily helpful for traders, because VIX is **
+tradable only as derivative contracts, whose dynamics does not always follow that of the VIX index. For
+example, Asensio (2013), Degiannakis (2008), Kostantinidi et al. (2008), Konstantinidi and Skiadopoulos
+(2011), who are among the few authors focusing on VIX futures (henceforth referred to as VXFs), highlight
+only a weak evidence of statistical predictability and experience a low level of profitability when implementing
+trading strategies based on VIX forecasts. The overall picture is not encouraging for investors: on the one hand,
+there is evidence that VIX is predictable; on the other, it seems very hard to trade VXFs by learning from the
+(predicted) VIX dynamics. "]
+
+---
+
+# Ballestra, L. V., Guizzardi, A., &amp; Palladini, F. (2019), IJF
+
+.tiny["Despite the importance and the common use of VIX as a volatility measure, only little attention has been paid
+to the problem of forecasting it. In particular, the few works on the subject show that the VIX is to some extent
+predictable. This finding, albeit theoretically interesting, is not necessarily helpful for traders, because VIX is 
+tradable only as derivative contracts, whose dynamics does not always follow that of the VIX index.** For
+example, Asensio (2013), Degiannakis (2008), Kostantinidi et al. (2008), Konstantinidi and Skiadopoulos
+(2011), who are among the few authors focusing on VIX futures (henceforth referred to as VXFs), highlight
+only a weak evidence of statistical predictability and experience a low level of profitability when implementing
+trading strategies based on VIX forecasts.** The overall picture is not encouraging for investors: on the one hand,
+there is evidence that VIX is predictable; on the other, it seems very hard to trade VXFs by learning from the
+(predicted) VIX dynamics. "]
+
+---
+
+# Ballestra, L. V., Guizzardi, A., &amp; Palladini, F. (2019), IJF
+
+.tiny["Despite the importance and the common use of VIX as a volatility measure, only little attention has been paid
+to the problem of forecasting it. In particular, the few works on the subject show that the VIX is to some extent
+predictable. This finding, albeit theoretically interesting, is not necessarily helpful for traders, because VIX is 
+tradable only as derivative contracts, whose dynamics does not always follow that of the VIX index.For
+example, Asensio (2013), Degiannakis (2008), Kostantinidi et al. (2008), Konstantinidi and Skiadopoulos
+(2011), who are among the few authors focusing on VIX futures (henceforth referred to as VXFs), highlight
+only a weak evidence of statistical predictability and experience a low level of profitability when implementing
+trading strategies based on VIX forecasts.** The overall picture is not encouraging for investors:** on the one hand,
+there is evidence that VIX is predictable; on the other, it seems very hard to trade VXFs by learning from the
+(predicted) VIX dynamics. "]
+
+---
+class: inverse, middle, center
+
+# Exercise 1 (cont.): Paragraph 3
+
+---
+
+# Ballestra, L. V., Guizzardi, A., &amp; Palladini, F. (2019), IJF
+
+"In the present paper, in order to fill this “forecasting gap”, we present a new approach for modelling VXF
+returns that provides a significant amount of predictability and allows us to build profitable trading strategies. "
+
+---
+
+
+# Ballestra, L. V., Guizzardi, A., &amp; Palladini, F. (2019), IJF
+
+"**In the present paper, in order to fill this “forecasting gap”, we present a new approach for modelling VXF
+returns that provides a significant amount of predictability and allows us to build profitable trading strategies.**"
+
+&gt; Introduce the research problem
+
+---
+
+class: inverse, middle, center
+
+# Exercise 2 
+
+
+**Saha, M., Santara, A., Mitra, P., Chakraborty, A., &amp; Nanjundiah, R. S. (2021). Prediction of the Indian summer monsoon using a stacked autoencoder and ensemble regression model. International Journal of Forecasting, 37(1), 58-71**
+
+---
+
+# Saha Moumita and others, 2021, IJF
+
+"The Indian summer monsoon is a complex climatic
+phenomenon. It refers to the rainfall occurring between
+June and September, which contributes to more than
+75% of the aggregate annual rainfall of the country. The
+India Meteorological Department defines the monsoon
+process as the seasonal reversal of the wind direction
+down the shores of the Indian Ocean; blowing from the
+southwest direction. "
+
+---
+# Saha Moumita and others, 2021, IJF
+
+"**The Indian summer monsoon is a complex climatic
+phenomenon.** It refers to the rainfall occurring between
+June and September, which contributes to more than
+75% of the aggregate annual rainfall of the country. The
+India Meteorological Department defines the monsoon
+process as the seasonal reversal of the wind direction
+down the shores of the Indian Ocean; blowing from the
+southwest direction." 
+
+
+---
+# Saha Moumita and others, 2021, IJF
+
+.tiny["The Indian summer monsoon is a complex climatic
+phenomenon.** It refers to the rainfall occurring between
+June and September, which contributes to more than
+75% of the aggregate annual rainfall of the country.** The
+India Meteorological Department defines the monsoon
+process as the seasonal reversal of the wind direction
+down the shores of the Indian Ocean; blowing from the
+southwest direction."]
+
+---
+
+# Saha Moumita and others, 2021, IJF
+
+.tiny["The Indian summer monsoon is a complex climatic
+phenomenon. It refers to the rainfall occurring between
+June and September, which contributes to more than
+75% of the aggregate annual rainfall of the country.** The
+India Meteorological Department defines the monsoon
+process as the** seasonal reversal of the wind direction
+down the shores of the Indian Ocean; blowing from the
+southwest direction."]
+
+
+
+---
+
+# Saha Moumita and others, 2021, IJF
+
+.tiny["The Indian summer monsoon is a complex climatic
+phenomenon. It refers to the rainfall occurring between
+June and September, which contributes to more than
+75% of the aggregate annual rainfall of the country. The
+India Meteorological Department defines the monsoon
+process as the seasonal reversal of the wind direction
+down the shores of the Indian Ocean; blowing from the
+southwest direction."]
+
+...
+
+.tiny["**The monsoon has a significant impact
+on agriculture, growth of flora-fauna, hydro-electricity
+production, freshwater renewal, and on the overall economic growth of the country.**"]
+
+---
+
+# Chapter 1: Introduction
+
+1.1 Background of the study
+
+**1.2 Objectives of the study**
+
+1.3 Significance of the study
+
+1.4 Thesis outline
+
+
+---
+
+#1.2 Objectives and aims of the study
+
+**Aim:** what you hope to achieve.
+
+**Objective:** the action(s) you will take in order to achieve the aim.
+
+- The main research objective
+
+- Specific aims of your research 
+
+
+---
+
+# Objectives should be SMART 
+
+&gt; **S**pecific 
+
+&gt; **M**easureable 
+
+&gt; **A**chievable
+
+&gt; **R**ealistic 
+
+&gt; **T**ime constrained 
+
+---
+
+# Chapter 1: Introduction
+
+1.1 Background of the study
+
+1.2 Objectives of the study
+
+**1.3 Significance of the study**
+
+1.4 Thesis outline
+
+---
+
+# 1.3 Significance of the study
+
+- **Why** your research is needed
+
+- **Who** benefits?
+
+- **How** that specific audience will benefit from its findings
+
+- **What** contribution will your study make to the literature or to the field? 
+
+---
+
+class: inverse, middle, centre
+
+# Example
+
+
+Konarasinghe, K. M. U. B. (2021). Forecasting COVID-19 Outbreak in the Philippines and Indonesia. Journal of New Frontiers in Healthcare and Biological Sciences, 2(1), 1-19.
+
+
+---
+# Forecasting COVID-19 Outbreak in the Philippines and Indonesia
+
+.tiny["The results of this study could be a tool to be proactive and protect Indonesia and the
+Philippines from the outbreak of the pandemic. **It could be useful to develop various
+strategies and policies to control the spread of the pandemic.** The results of this study
+would be **useful to work out the health care and medical resources with minimum waste.**
+Base on the results the **authorities can decide the lockdown schedules and impose the
+supply delivery systems** to attenuate the movement of the general public (Konarasinghe,
+2020). The results of this study could be **another guide for business.** They can **decide how to improve their business functions** to gain maximum benefits and retain their external
+stakeholders. "]
+
+
+]
+
+---
+
+# Chapter 1: Introduction
+
+1.1 Background of the study
+
+1.2 Objectives of the study
+
+1.3 Significance of the study
+
+**1.4 Thesis outline**
+
+---
+
+# 1.4 Thesis outline
+
+The remaining portion of this thesis is structured as follows: Chapter 2 provides a detailed
+overview of the literature. Chapter 3 illustrates the methodology used by the thesis. .....
+
+
+---
+# Chapter 2: Literature Review
+
+.pull-left[
+- Introduction
+
+    - Organisational pattern of the literature review
+
+- Body paragraphs
+  
+    - Historical background
+  
+    - Methodologies
+    
+    - What contributions do they make to the field?
+  
+    ]
+
+.pull-right[
+- Body paragraphs (cont.)
+
+    - The limitations of a study/the gaps in the study.
+- Conclusions
+
+    - The main agreement and disagreement]
 
 ---
 
 # Literature review
 
 
-
-
 - Chronological
 
-- By publication
+- Thematic
 
-- By trend
+- Methodological
 
 ---
 
-# Chronological: According to when they were published
+# Chronological: 
 
+According to when they were published 
+
+- The development of the field over time
+
+---
+
+# Thematic 
+
+- Reviews of literature are organized around a topic or issue, rather than the progression of time.
+
+- Different aspects of the topic
+
+
+---
+
+# Methodological
+
+- Compare the results that emerge from using different methods
 
 
 
