--- a/static/6_thesiswriting/main.html
+++ b/static/6_thesiswriting/main.html
@@ -64,7 +64,7 @@ class: center, middle, inverse, title-slide
 
 .pull-right[
 
-![](home.jpg)&lt;!-- --&gt;
+&lt;img src="home.jpg" width="2560" /&gt;
 
 
 ]
@@ -84,7 +84,7 @@ class: center, middle, inverse, title-slide
 
 .pull-right[
 
-![](calendar.jpeg)&lt;!-- --&gt;
+&lt;img src="calendar.jpeg" width="1707" /&gt;
 
 
 ]
@@ -234,7 +234,7 @@ class: center, middle, inverse, title-slide
 
 # Abstract
 
-**Do you want to make a good first impression one?**
+**Do you want to make a good first impression?**
 
 - A concise summary of the entire thesis
 
@@ -995,10 +995,8 @@ Q3. Fund more research into renewable energy
 Response: Strongly support (1), Somewhat support (2), Refused (3), Somewhat oppose (4), Strongly opposed (5) ]
 
 
-]
 
 .pull-right[
-
 
 
 |   |  1 | 2  | 3  | 4  | 5  |
@@ -1006,7 +1004,6 @@ Response: Strongly support (1), Somewhat support (2), Refused (3), Somewhat oppo
 | Q1  |15   | 20  | 2  | 38  |  25 |
 | Q2  | 10  | 14  | 2  |  44 |   30|
 |  Q3 | 6  |  9 | 2  |  41 |  42|
-
 
 
 ]
