--- a/static/8_innovation/innovation.html
+++ b/static/8_innovation/innovation.html
@@ -33,6 +33,12 @@ class: middle, center
 # **Data science:** a game changer for science and innovation
 
 ---
+background-image: url(orange.jpeg)
+background-position: center
+background-size: cover
+
+class: center, middle
+---
 
 background-image: url(f1.png)
 background-position: center
