--- a/static/8_innovation/innovation.html
+++ b/static/8_innovation/innovation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Data science: a game changer for science and innovation</title>
+    <title>Data science: A game changer for science and innovation</title>
     <meta charset="utf-8" />
     <meta name="author" content="Thiyanga S. Talagala, PhD" />
     <meta name="author" content="Department of Statistics, University of Sri Jayewardenepura" />
@@ -15,7 +15,7 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Data science: a game changer for science and innovation
+# Data science: A game changer for science and innovation
 ### Thiyanga S. Talagala, PhD
 ### Department of Statistics, University of Sri Jayewardenepura
 ### 3 February 2022
@@ -30,7 +30,7 @@ class: center, middle, inverse, title-slide
 
 class: middle, center
 
-# **Data science:** a game changer for science and innovation
+# **Data science:** A game changer for science and innovation
 
 ---
 background-image: url(orange.jpeg)
@@ -151,6 +151,15 @@ background-size: contain
 
 - Incorporate this into the device to generate an alert when the likelihood of having  Preeclampsia is high.
 
+---
+background-image: url(sydney.jpg)
+background-position: center
+background-size: cover
+
+---
+background-image: url(s1.png)
+background-position: center
+background-size: contain
 ---
 class: middle, center
 
