--- a/static/8_innovation/innovation.html
+++ b/static/8_innovation/innovation.html
@@ -258,6 +258,12 @@ source: https://www.coursera.org/learn/reproducible-research
 
 &lt;img src="innovation_files/figure-html/unnamed-chunk-2-1.png" width="100%" /&gt;
 
+
+---
+background-image: url(keynote.png)
+background-position: center
+background-size: contain
+
 ---
 
 # Small things matter a lot!
