--- a/public/about/index.html
+++ b/public/about/index.html
@@ -65,7 +65,12 @@
     <div class="article-content">
       <h2 id="2022">2022</h2>
 <ul>
-<li><a href="/8_innovation/innovation.html">Invencao - Innovative data competition</a></li>
+<li>
+<p><a href="/9_rmarkdown_rladies/">R Markdown: Communicate in a SMART way!</a></p>
+</li>
+<li>
+<p><a href="/8_innovation/innovation.html">Invencao - Innovative data competition</a></p>
+</li>
 </ul>
 <h2 id="2021">2021</h2>
 <ul>
