--- a/public/about/index.html
+++ b/public/about/index.html
@@ -66,7 +66,7 @@
       <h2 id="2022">2022</h2>
 <ul>
 <li>
-<p><a href="/9_rmarkdown_rladies/">R Markdown: Communicate in a SMART way!</a></p>
+<p><a href="/rmarkdown_rladies/rmarkdownRladiesNigeria.html">R Markdown: Communicate in a SMART way!</a></p>
 </li>
 <li>
 <p><a href="/8_innovation/innovation.html">Invencao - Innovative data competition</a></p>
