--- a/static/rmarkdown_rladies/rmarkdownRladiesNigeria.html
+++ b/static/rmarkdown_rladies/rmarkdownRladiesNigeria.html
@@ -1123,7 +1123,7 @@ class: middle center bg-main1
 
 ## <span class=" faa-flash animated " style=" display: -moz-inline-stack; display: inline-block; transform: rotate(0deg);">Make some VOICE using R Makrkdown!</span>
 
-Slides are available at [https://talks-thiyanga.netlify.app/rmarkdown_rladies/rmarkdownrladies_tst#1](https://talks-thiyanga.netlify.app/rmarkdown_rladies/rmarkdownrladies_tst#1) 
+Slides are available at [https://thiyanga.netlify.app/talk/nigeria/](https://thiyanga.netlify.app/talk/nigeria/) 
 
 &lt;a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"&gt;&lt;img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /&gt;&lt;/a&gt;&lt;br /&gt;This work is licensed under a &lt;a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"&gt;Creative Commons Attribution-ShareAlike 4.0 International License&lt;/a&gt;.
 
