--- a/static/9_scs/scs.html
+++ b/static/9_scs/scs.html
@@ -46,7 +46,7 @@ class: middle, center, inverse
 
 <span>&lt;i class="fas  fa-bullhorn fa-5x faa-ring animated "&gt;&lt;/i&gt;</span>
 
-Statistical Consulting Service, Department of Statistics
+Statistical Consulting Service, Department of Statistics,
 
 Faculty of Applied Sciences, University of Sri Jayewardenepura
 
